Add EMS refresh total time filter

--- a/90-manageiq-input.conf
+++ b/90-manageiq-input.conf
@@ -9,6 +9,9 @@ filter {
           # dequeue times for tasks popped off the queue
           "%{DATE}T%{TIME}%{SPACE}#%{WORD:miq_worker_pid}:%{WORD:miq_worker_thread_id}%{NOTSPACE}%{SPACE}%{RUBY_LOGLEVEL:miq_loglevel}%{SPACE}%{NOTSPACE}%{SPACE}%{NOTSPACE}%{SPACE}%{NOTSPACE}%{WORD:miq_method}%{NOTSPACE}%{GREEDYDATA}Zone: \[%{WORD:miq_message_zone}\], Role: %{NOTSPACE}%{WORD:miq_message_role}?%{NOTSPACE}%{GREEDYDATA}Command: %{NOTSPACE}%{WORD:miq_message_command}%{NOTSPACE}%{GREEDYDATA}Dequeued in: \[%{NUMBER:miq_message_dequeue_in:float}\]%{GREEDYDATA}",
 
+          # EMS refresh timings
+          "%{DATE}T%{TIME}%{SPACE}#%{WORD:miq_worker_pid}:%{WORD:miq_worker_thread_id}%{NOTSPACE}%{SPACE}%{RUBY_LOGLEVEL:miq_loglevel}%{SPACE}%{NOTSPACE}%{SPACE}%{NOTSPACE}%{SPACE}%{NOTSPACE} EMS: \[%{GREEDYDATA:miq_refresh_ems}\],%{GREEDYDATA}Refreshing targets for EMS...Complete%{GREEDYDATA}:ems_refresh=>%{NUMBER:miq_refresh_time_total}%{GREEDYDATA}",
+
           # catch-all for all other messages
           "%{DATE}T%{TIME}%{SPACE}#%{WORD:miq_worker_pid}:%{WORD:miq_worker_thread_id}%{NOTSPACE}%{SPACE}%{RUBY_LOGLEVEL:miq_loglevel}%{SPACE}%{NOTSPACE}%{SPACE}%{NOTSPACE}%{SPACE}%{NOTSPACE}%{WORD:miq_method}%{NOTSPACE}%{SPACE}%{GREEDYDATA:miq_msg}"
         ]
