Use lazy matching where possible. Add the miq_message_latency field
Latency is the time between when the message was created or when it was marked for delivery (deliver on). When no deliver on date/time is set, latency = dequeued in time. When deliver on was set, latency is the difference between the timestamp of the message and the deliver on datetime

--- a/90-manageiq-input.conf
+++ b/90-manageiq-input.conf
@@ -3,7 +3,7 @@ filter {
     grok {
       patterns_dir => ["/etc/logstash/patterns"]
       # number of metric captures on the queue for a zone
-      match => { "message" => "%{MIQ_PREAMBLE}%{NUMBER:miq_capture_count:int} \"%{WORD:miq_capture_type}\"%{GREEDYDATA}\[%{WORD:miq_capture_zone}\]" }
+      match => { "message" => "%{MIQ_PREAMBLE}%{NUMBER:miq_capture_count:int} \"%{WORD:miq_capture_type}\"%{DATA}\[%{WORD:miq_capture_zone}\]" }
       add_tag => ["miq_capture_healthcheck", "grokked" ]
     }
 
@@ -11,18 +11,41 @@ filter {
     if "grokked" not in [tags] {
       grok {
         patterns_dir => ["/etc/logstash/patterns"]
-        match => { "message" => "%{MIQ_PREAMBLE}%{GREEDYDATA}Zone: \[%{WORD:miq_message_zone}\], Role: %{NOTSPACE}%{WORD:miq_message_role}?%{NOTSPACE}%{GREEDYDATA}Command: %{NOTSPACE}%{WORD:miq_message_command}%{NOTSPACE}%{GREEDYDATA}Dequeued in: \[%{NUMBER:miq_message_dequeue_in:float}\]%{GREEDYDATA}" }
-        add_tag => [ "miq_message", "grokked" ]
+        match => { "message" => "%{MIQ_PREAMBLE}%{DATA}Zone: \[%{WORD:miq_message_zone}\]%{DATA}Role: \[%{WORD:miq_message_role}?\]%{DATA}Command: \[%{DATA:miq_message_command}\]%{DATA}Deliver On: \[%{NUMBER:miq_message_deliver_on}?\]%{DATA}Dequeued in: \[%{NUMBER:miq_message_dequeue_in:float}\]" }
+        add_tag => [ "miq_dequeue_message", "grokked" ]
       }
     }
 
+    # some extra post-processing for tags
+    # if they have a deliver on time, let's calculate the
+    # time between deliver_on and the generation of the log message
+    if "miq_dequeue_message" in [tags] {
+      ruby {
+        code => "
+          require 'date'
+          if event.get('miq_message_deliver_on').nil?
+            event.set('miq_message_latency', event.get('miq_message_dequeue_in'))
+          else
+            deliver_on = DateTime.parse(event.get('miq_message_deliver_on'))
+            msg_timestamp = event.get('@timestamp')
+            delta = msg_timestamp - deliver_on
+            event.set('miq_message_latency',deliver_on)
+          end
+        "
+      }
+
+      # cleanup - we don't need this
+      mutate {
+        remove_field => ['miq_message_deliver_on']
+      }
+    }
     # this message is for EMS refresh timings
     # we do extra grokking for this, returning further events.
     if "grokked" not in [tags] {
       grok {
         patterns_dir => ["/etc/logstash/patterns"]
         # EMS refresh timings
-        match => { "message" => "%{MIQ_PREAMBLE}%{GREEDYDATA}EMS: \[%{GREEDYDATA:miq_refresh_ems}\],%{GREEDYDATA}Refreshing targets for EMS...Complete - Timings%{SPACE}{%{GREEDYDATA:miq_refresh_timings}}" }
+        match => { "message" => "%{MIQ_PREAMBLE}%{SPACE}EMS:%{SPACE}\[%{DATA:miq_refresh_ems}\]%{DATA}Refreshing targets for EMS...Complete - Timings%{SPACE}{%{DATA:miq_refresh_timings}}" }
         add_tag => [ "miq_refresh_timings", "grokked" ]
       }
     }
@@ -51,6 +74,7 @@ filter {
     # cleanup.
     if "grokked" in [tags] {
       mutate {
+        remove_field => ["fields", "input_type", "offset", "program"]
         remove_tag => ["beats_input_codec_plain_applied", "_grokparsefailure", "grokked"]
       }
     }
