Fix up some bugs in the message latency calculation

--- a/90-manageiq-input.conf
+++ b/90-manageiq-input.conf
@@ -11,7 +11,7 @@ filter {
     if "grokked" not in [tags] {
       grok {
         patterns_dir => ["/etc/logstash/patterns"]
-        match => { "message" => "%{MIQ_PREAMBLE}%{DATA}Zone: \[%{WORD:miq_message_zone}\]%{DATA}Role: \[%{WORD:miq_message_role}?\]%{DATA}Command: \[%{DATA:miq_message_command}\]%{DATA}Deliver On: \[%{NUMBER:miq_message_deliver_on}?\]%{DATA}Dequeued in: \[%{NUMBER:miq_message_dequeue_in:float}\]" }
+        match => { "message" => "%{MIQ_PREAMBLE}%{DATA}Zone: \[%{WORD:miq_message_zone}?\]%{DATA}Role: \[%{WORD:miq_message_role}?\]%{DATA}Command: \[%{DATA:miq_message_command}\]%{DATA}Deliver On: \[%{DATA:miq_message_deliver_on}?\]%{DATA}Dequeued in: \[%{NUMBER:miq_message_dequeue_in:float}\]" }
         add_tag => [ "miq_dequeue_message", "grokked" ]
       }
     }
@@ -26,10 +26,10 @@ filter {
           if event.get('miq_message_deliver_on').nil?
             event.set('miq_message_latency', event.get('miq_message_dequeue_in'))
           else
-            deliver_on = DateTime.parse(event.get('miq_message_deliver_on'))
-            msg_timestamp = event.get('@timestamp')
+            deliver_on = DateTime.parse(event.get('miq_message_deliver_on')).to_time.to_f
+            msg_timestamp = event.get('@timestamp').to_f
             delta = msg_timestamp - deliver_on
-            event.set('miq_message_latency',deliver_on)
+            event.set('miq_message_latency',delta)
           end
         "
       }
