Tidy up the pipeline, improve the readme, add better extraction of the timestamp and fix Ruby exceptions

--- a/90-manageiq-input.conf
+++ b/90-manageiq-input.conf
@@ -1,5 +1,6 @@
 filter {
   if "cloudforms" in [tags] {
+
     grok {
       patterns_dir => ["/etc/logstash/patterns"]
       # number of metric captures on the queue for a zone
@@ -25,11 +26,17 @@ filter {
           require 'date'
           if event.get('miq_message_deliver_on').nil?
             event.set('miq_message_latency', event.get('miq_message_dequeue_in'))
+
           else
-            deliver_on = DateTime.parse(event.get('miq_message_deliver_on')).to_time.to_f
-            msg_timestamp = event.get('@timestamp').to_f
+            deliver_on = DateTime.parse(event.get('miq_message_deliver_on'))
+            msg_timestamp = DateTime.parse(event.get('miq_timestamp'))
             delta = msg_timestamp - deliver_on
-            event.set('miq_message_latency',delta)
+
+            # take the better of the two - seen situations where the dequeue in
+            # seconds is less than delta, probably because there's a delay writing the log
+            # message. buffering?
+            delta = [event.get('miq_message_dequeue_in'), (delta*3600*24)].min
+            event.set('miq_message_latency',delta.to_f)
           end
         "
       }
@@ -39,13 +46,14 @@ filter {
         remove_field => ['miq_message_deliver_on']
       }
     }
+
     # this message is for EMS refresh timings
     # we do extra grokking for this, returning further events.
     if "grokked" not in [tags] {
       grok {
         patterns_dir => ["/etc/logstash/patterns"]
         # EMS refresh timings
-        match => { "message" => "%{MIQ_PREAMBLE}%{SPACE}EMS:%{SPACE}\[%{DATA:miq_refresh_ems}\]%{DATA}Refreshing targets for EMS...Complete - Timings%{SPACE}{%{DATA:miq_refresh_timings}}" }
+        match => { "message" => "%{MIQ_PREAMBLE}EMS:%{SPACE}\[%{DATA:miq_refresh_ems}\]%{DATA}Refreshing targets for EMS...Complete - Timings%{SPACE}{%{DATA:miq_refresh_timings}}" }
         add_tag => [ "miq_refresh_timings", "grokked" ]
       }
     }
@@ -60,6 +68,12 @@ filter {
           end
         "
       }
+
+      # cleanup - we don't need this
+      mutate {
+        remove_field => ['miq_refresh_timings']
+      }
+
     }
 
     # catch all for everything else.
@@ -73,6 +87,13 @@ filter {
 
     # cleanup.
     if "grokked" in [tags] {
+
+      # replace the logstash @timestamp with the timestamp from the log line
+      date {
+        match => [ "miq_timestamp", "ISO8601" ]
+        timezone => "UTC"
+      }
+
       mutate {
         remove_field => ["fields", "input_type", "offset", "program"]
         remove_tag => ["beats_input_codec_plain_applied", "_grokparsefailure", "grokked"]
