Add filter for EVM events

--- a/90-manageiq-input.conf
+++ b/90-manageiq-input.conf
@@ -8,6 +8,15 @@ filter {
       add_tag => ["miq_capture_healthcheck", "grokked" ]
     }
 
+    # EVM events - worker start, stop, vm start, etc.
+    if "grokked" not in [tags] {
+      grok {
+        patterns_dir => ["/etc/logstash/patterns"]
+        match => { "message" => "%{MIQ_PREAMBLE}%{DATA}MiqEvent.raise_evm_event%{DATA}Args: \[\[\"%{DATA:miq_event_source}\", %{NUMBER:miq_event_source_id}\], \"%{WORD:miq_event}\", {%{DATA}:type=>\"%{DATA:miq_event_type}\"}" }
+        add_tag => [ "grokked" ]
+      }
+    }
+
     # dequeue times for tasks popped off the queue
     if "grokked" not in [tags] {
       grok {
